tests/reference/asr_preprocess-cpp3-1719443.stderr
tests/errors/cpp3.f90:7:10 semantic error: Variable 'xx' not declared
print *, xx, X123, y
         ^~
